tests/golden/err-import-program/expected_error.txt
error: `./recipe` はプログラムファイルです（トップレベルに式があります）。import できません
 --> ./entry.clum:1:2
  |
1 | @./recipe
  |  ^^^^^^^^ プログラムファイルは `clum build` で実行する対象です
